--- a/style.css
+++ b/style.css
@@ -181,7 +181,7 @@ nav ul li a:hover {
   display: block;
 }
 
-/* === Animated Electrical Background === */
+/* === Animated EE Symbols Background === */
 body::before {
   content: "";
   position: absolute;
@@ -189,9 +189,13 @@ body::before {
   left: 0;
   width: 200%;
   height: 200%;
-  background-image: url('https://upload.wikimedia.org/wikipedia/commons/1/1f/Electrical_symbol_gnd_%28earth%29.svg');
+  background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/1/1f/Electrical_symbol_gnd_%28earth%29.svg/50px-Electrical_symbol_gnd_%28earth%29.svg.png'),
+                    url('https://upload.wikimedia.org/wikipedia/commons/thumb/3/3c/IEC_R.svg/50px-IEC_R.svg.png'),
+                    url('https://upload.wikimedia.org/wikipedia/commons/thumb/2/28/Op-amp_symbol.svg/50px-Op-amp_symbol.svg.png'),
+                    url('https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Sine_wave_icon.svg/50px-Sine_wave_icon.svg.png');
   background-repeat: repeat;
-  background-size: 80px;
+  background-size: 60px, 50px, 50px, 50px;
+  background-position: 0 0, 80px 80px, 160px 160px, 240px 240px;
   opacity: 0.015;
   z-index: 0;
   pointer-events: none;
