--- a/style.css
+++ b/style.css
@@ -187,22 +187,27 @@ body::before {
   position: absolute;
   top: 0;
   left: 0;
-  width: 200%;
-  height: 200%;
-  background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/1/1f/Electrical_symbol_gnd_%28earth%29.svg/50px-Electrical_symbol_gnd_%28earth%29.svg.png'),
-                    url('https://upload.wikimedia.org/wikipedia/commons/thumb/3/3c/IEC_R.svg/50px-IEC_R.svg.png'),
-                    url('https://upload.wikimedia.org/wikipedia/commons/thumb/2/28/Op-amp_symbol.svg/50px-Op-amp_symbol.svg.png'),
-                    url('https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Sine_wave_icon.svg/50px-Sine_wave_icon.svg.png');
+  width: 300%;
+  height: 300%;
+  background-image: 
+    url('https://upload.wikimedia.org/wikipedia/commons/thumb/1/1f/Electrical_symbol_gnd_%28earth%29.svg/40px-Electrical_symbol_gnd_%28earth%29.svg.png'),
+    url('https://upload.wikimedia.org/wikipedia/commons/thumb/3/3c/IEC_R.svg/40px-IEC_R.svg.png'),
+    url('https://upload.wikimedia.org/wikipedia/commons/thumb/2/28/Op-amp_symbol.svg/40px-Op-amp_symbol.svg.png'),
+    url('https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Sine_wave_icon.svg/40px-Sine_wave_icon.svg.png');
   background-repeat: repeat;
-  background-size: 60px, 50px, 50px, 50px;
-  background-position: 0 0, 80px 80px, 160px 160px, 240px 240px;
-  opacity: 0.015;
+  background-size: 50px, 50px, 50px, 50px;
+  background-position:
+    0 0,
+    80px 80px,
+    160px 160px,
+    240px 240px;
+  opacity: 0.04;
   z-index: 0;
   pointer-events: none;
-  animation: scrollSymbols 60s linear infinite;
+  animation: scrollSymbols 40s linear infinite;
 }
 
 @keyframes scrollSymbols {
   0% { transform: translate(0, 0); }
-  100% { transform: translate(-20%, -10%); }
+  100% { transform: translate(-10%, -10%); }
 }
