--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@ nav ul li a:hover {
   transform: scale(1.2);
 }
 
-/* === Profile Image (no rotation) === */
+/* === Profile Image === */
 .hero-photo {
   flex: 1;
   display: flex;
@@ -189,22 +189,22 @@ body::before {
   left: 0;
   width: 300%;
   height: 300%;
-  background-image: 
-    url('https://upload.wikimedia.org/wikipedia/commons/thumb/1/1f/Electrical_symbol_gnd_%28earth%29.svg/40px-Electrical_symbol_gnd_%28earth%29.svg.png'),
+  background-image:
     url('https://upload.wikimedia.org/wikipedia/commons/thumb/3/3c/IEC_R.svg/40px-IEC_R.svg.png'),
     url('https://upload.wikimedia.org/wikipedia/commons/thumb/2/28/Op-amp_symbol.svg/40px-Op-amp_symbol.svg.png'),
-    url('https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Sine_wave_icon.svg/40px-Sine_wave_icon.svg.png');
+    url('https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Sine_wave_icon.svg/40px-Sine_wave_icon.svg.png'),
+    url('https://upload.wikimedia.org/wikipedia/commons/thumb/1/1f/Electrical_symbol_gnd_%28earth%29.svg/40px-Electrical_symbol_gnd_%28earth%29.svg.png');
   background-repeat: repeat;
-  background-size: 50px, 50px, 50px, 50px;
+  background-size: 50px;
   background-position:
     0 0,
-    80px 80px,
-    160px 160px,
-    240px 240px;
-  opacity: 0.04;
+    60px 60px,
+    120px 120px,
+    180px 180px;
+  opacity: 0.2; /* VISIBLE! */
   z-index: 0;
   pointer-events: none;
-  animation: scrollSymbols 40s linear infinite;
+  animation: scrollSymbols 30s linear infinite;
 }
 
 @keyframes scrollSymbols {
